# lenny-tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CMakeLists.txt
source/: CMakeLists.txt
source/apps/: CMakeLists.txt  main.cpp
source/apps/include/: Test_EulerAngle.h  Test_FiniteDifference.h  Test_Json.h  Test_Logger.h  Test_Tensor.h  Test_Timer.h  Test_Trajectory.h  Test_Transformation.h  Test_Utils.h
source/tests/: main.cpp
source/tests/include/: Test_FiniteDifference.h  Test_Json.h  Test_Tensor.h  Test_Utils.h
source/tools/: CMakeLists.txt
source/tools/include/lenny/tools/: Animator.h  Definitions.h  EulerAngleRigidBody.h  FiniteDifference.h  Gui.h  Json.h  Logger.h  Model.h  Plot.h  Renderer.h  Tensor.h  Timer.h  Trajectory.h  Transformation.h  Typedefs.h  Utils.h
source/tools/src/: Animator.cpp  Definitions.cpp  EulerAngleRigidBody.cpp  FiniteDifference.cpp  Gui.cpp  Json.cpp  Logger.cpp  Model.cpp  Plot.cpp  Renderer.cpp  Tensor.cpp  Timer.cpp  Trajectory.cpp  Transformation.cpp  Typedefs.cpp  Utils.cpp
